--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="nav-bar__right">
             <ul class="directional">
               <li class="directinal__item">
-                <a href="./home.html" class="directinal__item-link">Home</a>
+                <a href="./index.html" class="directinal__item-link">Home</a>
               </li>
               <li class="directinal__item">
                 <a href="./about.html" class="directinal__item-link">About</a>
